--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -5129,7 +5129,7 @@
         "th":"",
         "id":""
     },
-    "UI.windows.rankings.btn.gears":{
+    "UI.windows.rankings.btn.gear":{
         "en":"Gears",
         "fr":"Equipement",
         "es":"",
