--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -5141,7 +5141,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trang Bị",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5388,7 +5388,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tỷ Lệ Thành Công: {0}%",
+        "vi":"Khả năng Thành Công: {0}%",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5863,7 +5863,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Công Nguyên Tố",
+        "vi":"Sát Thương Nguyên Tố",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5882,7 +5882,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thủ Nguyên Tố",
+        "vi":"Phòng Thủ Nguyên Tố",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5901,7 +5901,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tỉ Lệ Bạo Kích Nguyên Tố",
+        "vi":"Khả Năng Bạo Kích Nguyên Tố",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5958,7 +5958,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hỏa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5977,7 +5977,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Băng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5996,7 +5996,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lôi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6015,7 +6015,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ám",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6034,7 +6034,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6053,7 +6053,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đây là loại Sát Thương Nguyên Tố căn bản. Nó gia tăng thêm sát thương cho TẤT CẢ các đòn tấn công dưới dạng Sát Thương Nguyên Tố. Sát Thương Nguyên Tố không có mối liên hệ với bất kì các chỉ số khác và sẽ chỉ bị ảnh hưởng bởi các chỉ số nguyên tố.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6072,7 +6072,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đây là loại Phòng Thủ Nguyên Tố căn bản. Nó cho phép bạn giảm thiểu Sát Thương Nguyên Tố từ đối thủ của bạn. là dạng trái ngược với Hỏa Nguyên Tố thứ mà gia tăng Sức Mạnh Nguyên Tố. Quái vật không có Sát Thương Nguyên Tố",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6091,7 +6091,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lôi hệ gia tăng khả năng bạo kích đòn đánh với Sát Thương Nguyên Tố",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6110,7 +6110,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ám hệ gia tăng Sát Thương Bạo Kích Nguyên Tố. Đòn bạo kích cũng gia tăng khả năng trị liệu đến từ Quang hệ nguyên tố",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6129,7 +6129,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Quang hệ sẽ cho một ít khả năng hồi máu khi kích hoạt. Khả năng kích hoạt phụ thuộc vào cấp độ của Quang hệ nguyên tố của bạn.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6148,7 +6148,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chỉ Số Nguyên Tố",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6167,7 +6167,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 10: +1000 Máu, Sát Thương Nguyên Tố tăng thêm 300 điểm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6186,7 +6186,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 20: +2000 Máu, Sát Thương Nguyên Tố tăng thêm 700 điểm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6205,7 +6205,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 30: +7000 Máu, Sát Thương Nguyên Tố tăng thêm 1500 điểm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6224,7 +6224,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 40: +10 000 Máu, Sát Thương Nguyên Tố tăng thêm 1500 điểm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6243,7 +6243,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 50: +15 000 Máu, Sát Thương Nguyên Tố tăng thêm 2000 điểm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6262,7 +6262,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 60: +20 000 Máu, Sát Thương Nguyên Tố tăng thêm 3000 điểm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6281,7 +6281,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 10: +1000 Máu, Phòng Thủ Nguyên Tố tăng thêm 300 điểm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6300,7 +6300,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 20: +2000 Máu, Phòng Thủ Nguyên Tố tăng thêm 700 điểm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6319,7 +6319,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 30: +7000 Máu, Phòng Thủ Nguyên Tố tăng thêm 1500 điểm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6338,7 +6338,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 40: +10 000 Máu, Phòng Thủ Nguyên Tố tăng thêm 1500 điểm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6357,7 +6357,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 50: +15 000 Máu, Phòng Thủ Nguyên Tố tăng thêm 2000 điểm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6376,7 +6376,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 60: +20 000 Máu, Phòng Thủ Nguyên Tố tăng thêm 3000 điểm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6395,7 +6395,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 10: +1000 Máu, Khả Năng Bạo Kích Nguyên Tố tăng thêm 2%",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6414,7 +6414,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 20: +2000 Máu, Khả Năng Bạo Kích Nguyên Tố tăng thêm 4%",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6433,7 +6433,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 30: +7000 Máu, Khả Năng Bạo Kích Nguyên Tố tăng thêm 6%",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6452,7 +6452,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 40: +10 000 Máu, Khả Năng Bạo Kích Nguyên Tố tăng thêm 18%",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6471,7 +6471,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 50: +15 000 Máu, Khả Năng Bạo Kích Nguyên Tố tăng thêm 40%",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6490,7 +6490,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 60: +20 000 Máu, Khả Năng Bạo Kích Nguyên Tố tăng thêm 60%",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6509,7 +6509,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 10: +1000 Máu, Phòng Thủ Nguyên Tố tăng thêm 300 điểm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6528,7 +6528,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 20: +2000 Máu, 5% khả năng cường hóa sát thương thêm 15% trong 8 giây",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6547,7 +6547,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 30: +7000 Máu, 5% khả năng cường hóa sát thương thêm 35% trong 8 giây",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6566,7 +6566,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 40: +10 000 Máu, 5% khả năng cường hóa sát thương thêm 55% trong 8 giây",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6585,7 +6585,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 50: +15 000 Máu, 5% khả năng cường hóa sát thương thêm 75% trong 8 giây",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6604,7 +6604,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 60: +20 000 Máu, 5% khả năng cường hóa sát thương thêm 95% trong 8 giây",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6623,7 +6623,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 10: +1000 HP, Sát Thương Nguyên Tố tăng thêm 300 điểm, Trị Liệu Nguyên Tố +100",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6642,7 +6642,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 20: +2000 Máu, 5% khả năng kháng sát thương thêm 15% trong 8 giây, Trị Liệu Nguyên Tố +500",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6661,7 +6661,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 30: +7000 Máu, 5% khả năng kháng sát thương thêm 45% trong 8 giây, Trị Liệu Nguyên Tố +1000",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6680,7 +6680,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 40: +10 000 Máu, 5% khả năng kháng sát thương thêm 75% trong 8 giây, Trị Liệu Nguyên Tố +2000",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6699,7 +6699,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 50: +15 000 Máu, 5% khả năng kháng sát thương thêm 110% trong 8 giây, Trị Liệu Nguyên Tố +5000",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6718,7 +6718,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 60: +20 000 Máu, 5% khả năng kháng sát thương thêm 150% trong 8 giây, Trị Liệu Nguyên Tố +10 000",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6737,7 +6737,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bộ Cổ Ngữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6756,7 +6756,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cổ Ngữ Thưởng Kèm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6775,7 +6775,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Yêu cầu tối thiểu cấp độ {0} {1}",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6794,7 +6794,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Để có thể sử dụng cổ ngữ trên trang bị, bạn cần đặt trang bị ở vị trí bên trên, sau đó nhấn xác nhận. Khi đã sử dụng một cổ ngữ lên một vật phẩm thì cổ ngữ cũng bị phá hủy và thay thế vào một cái đang tồn tại nếu có.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6813,7 +6813,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lạp Khuyển",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6832,7 +6832,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bão Táp Trận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6851,7 +6851,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thống Khổ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6870,7 +6870,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hải Tặc Đế",
         "ar":"",
         "it":"",
         "pl":"",
