--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2880,7 +2880,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bão Trận - Vũ Khí",
+        "vi":"Bão Táp Trận - Vũ Khí",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2899,7 +2899,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bão Trận - Áo Giáp",
+        "vi":"Bão Táp Trận - Áo Giáp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2918,7 +2918,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bi Thảm - Mũ",
+        "vi":"Thống Khổ - Mũ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2937,7 +2937,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bi Thảm - Áo Giáp",
+        "vi":"Thống Khổ - Áo Giáp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2956,7 +2956,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bi Thảm - Đai",
+        "vi":"Thống Khổ - Đai",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2975,7 +2975,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bi Thảm - Giày",
+        "vi":"Thống Khổ - Giày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2994,7 +2994,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bi Thảm - Áo Choàng",
+        "vi":"Thống Khổ - Áo Choàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3013,7 +3013,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Vua Hải Tặc - Vũ Khí",
+        "vi":"Hải Tặc Đế - Vũ Khí",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3032,7 +3032,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Vua Hải Tặc - Găng Tay",
+        "vi":"Hải Tặc Đế - Găng Tay",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3051,7 +3051,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Vua Hải Tặc - Nhẫn",
+        "vi":"Hải Tặc Đế - Nhẫn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3070,7 +3070,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Vua Hải Tặc - Dây Chuyền",
+        "vi":"Hải Tặc Đế - Dây Chuyền",
         "ar":"",
         "it":"",
         "pl":"",
