--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -7630,7 +7630,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Đòn đánh thường có 2% cơ hội làm Choáng mục tiêu trong 1 giây.",
+        "vi": "Đòn đánh thường có 2% khả năng làm Choáng mục tiêu trong 1 giây.",
         "ar": "",
         "it": "",
         "pl": "",
