--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4521,7 +4521,7 @@
         "th":"",
         "id":""
     },
-    "UI.windows.daily.title":{
+    "UI.windows.daily_recomended.title":{
         "en":"Daily Recomended List",
         "fr":"Liste Journalière Recommandée",
         "es":"",
