--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4552,7 +4552,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đăng nhập vào Tiên Cảnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4571,7 +4571,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhận Thưởng K.Nghiệm Hàng Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4590,7 +4590,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoàn Thành 10 Nhiệm Vụ Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4609,7 +4609,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoàn Thành 10 Nhiệm Vụ Bur",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4628,7 +4628,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giết 10 Quái Vật Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4647,7 +4647,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sử dụng Chỉ Kim Thủ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4666,7 +4666,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sử dụng Kiếm Hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4685,7 +4685,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thu thập vài linh hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4704,7 +4704,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phụ Bản Hàng Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4723,7 +4723,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tham gia Phụ Bản K.Nghiệm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4742,7 +4742,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tham gia Huấn Luyện Đào Tạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4761,7 +4761,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm 2 <span title='Do 2 Werewolf, Masquerade or Battlefield'>sự kiện</span>",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4780,7 +4780,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sử dụng 500 điểm Năng Lượng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4799,7 +4799,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoàn thành một lần Vận Chuyển Hắc Ám",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4818,7 +4818,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoàn thành một lần 'Trộm Đúng Đắn'",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4837,7 +4837,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tham gia vào Thử Thách 3 Người",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4856,7 +4856,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chiến đấu trong Đấu Trường Liên Máy Chủ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4875,7 +4875,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tham gia Ngồi Thiền",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4894,7 +4894,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tham gia Vực Thẳm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4913,7 +4913,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhiệm Vụ Thử Thách Nguyên Tố",
         "ar":"",
         "it":"",
         "pl":"",
