--- a/Translation/item.json
+++ b/Translation/item.json
@@ -11470,6 +11470,120 @@
         "th":"",
         "id":""
     },
+    "item.35004.name":{
+        "en":"Lv. 50 Chest",
+        "fr":"Coffre Nv. 50",
+        "es":"",
+        "ch":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Rương Cấp 50",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.35005.name":{
+        "en":"Lv. 60 Chest",
+        "fr":"Coffre Nv. 60",
+        "es":"",
+        "ch":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Rương Cấp 60",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.35006.name":{
+        "en":"Lv. 70 Chest",
+        "fr":"Coffre Nv. 70",
+        "es":"",
+        "ch":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Rương Cấp 70",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.35007.name":{
+        "en":"Lv. 80 Chest",
+        "fr":"Coffre Nv. 80",
+        "es":"",
+        "ch":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Rương Cấp 80",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.35008.name":{
+        "en":"Lv. 90 Chest",
+        "fr":"Coffre Nv. 90",
+        "es":"",
+        "ch":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Rương Cấp 90",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.35009.name":{
+        "en":"Lv. 100 Chest",
+        "fr":"Coffre Nv. 100",
+        "es":"",
+        "ch":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Rương Cấp 100",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.40000.name":{
         "en":"Strawberry",
         "fr":"Fraise",
