--- a/Translation/item.json
+++ b/Translation/item.json
@@ -11584,6 +11584,82 @@
         "th":"",
         "id":""
     },
+    "item.35010.name":{
+        "en":"Lv. 1-30 Active Chest I",
+        "fr":"Coffre Actif I Nv. 1-30",
+        "es":"",
+        "ch":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.35011.name":{
+        "en":"Lv. 1-30 Active Chest II",
+        "fr":"Coffre Actif II Nv. 1-30",
+        "es":"",
+        "ch":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.35010.name":{
+        "en":"Lv. 1-30 Active Chest I",
+        "fr":"Coffre Actif I Nv. 1-30",
+        "es":"",
+        "ch":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.35010.name":{
+        "en":"Lv. 1-30 Active Chest I",
+        "fr":"Coffre Actif I Nv. 1-30",
+        "es":"",
+        "ch":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.40000.name":{
         "en":"Strawberry",
         "fr":"Fraise",
