--- a/Translation/item.json
+++ b/Translation/item.json
@@ -11622,9 +11622,9 @@
         "th":"",
         "id":""
     },
-    "item.35010.name":{
-        "en":"Lv. 1-30 Active Chest I",
-        "fr":"Coffre Actif I Nv. 1-30",
+    "item.35012.name":{
+        "en":"Lv. 1-30 Active Chest III",
+        "fr":"Coffre Actif III Nv. 1-30",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -11641,9 +11641,9 @@
         "th":"",
         "id":""
     },
-    "item.35010.name":{
-        "en":"Lv. 1-30 Active Chest I",
-        "fr":"Coffre Actif I Nv. 1-30",
+    "item.35013.name":{
+        "en":"Lv. 1-30 Active Chest IV",
+        "fr":"Coffre Actif IV Nv. 1-30",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
